# sf2loki

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  SECURITY.md  config.docker.yaml  config.example.yaml  docker-compose.build.yml  docker-compose.yml  justfile  pyproject.toml  release-please-config.json  renovate.json  zensical.toml
.github/workflows/: ci.yml  codeql.yml  docker-security.yml  docker.yml  notify-new-issue.yml  release-please.yml  scorecard.yml  trigger-docs-sync.yml
benchmarks/: bench_pipeline_hotpath.py
deploy/grafana/: README.md  alerts.yaml  gen_alerts.py  gen_dashboard.py  sf2loki-dashboard.json
deploy/grafana/dashboards/: sf2loki-apex-performance.json  sf2loki-api-integration.json  sf2loki-connector-health.json  sf2loki-overview.json  sf2loki-security-access.json
deploy/grafana/rules/alerting/: sf2loki-apex-callout-error-rate.yaml  sf2loki-api-limit-low.yaml  sf2loki-ingest-lag-high.yaml  sf2loki-leader-anomaly.yaml  sf2loki-login-failure-spike.yaml  sf2loki-loki-push-failing.yaml  sf2loki-no-recent-push.yaml
deploy/grafana/rules/recording/: sf2loki-rec-apex-callout-errors-5m.yaml  sf2loki-rec-api-usage-5m.yaml  sf2loki-rec-events-5m.yaml  sf2loki-rec-login-failures-5m.yaml
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: .meta.yml  404.md  alerts.md  architecture.md  changelog.md  config-reference.md  configuring-sources.md  generate-activity.md  getting-started.md  glossary.md  index.md  installation.md  robots.txt  security.md  state-runbook.md  troubleshooting.md
docs/configuration/: index.md  presets.md
docs/deployment/: high-availability.md  index.md  kubernetes.md  state.md
docs/development/: contributing.md  generate-activity.md  release-process.md
docs/includes/: abbreviations.md
docs/javascripts/: seo.js
docs/observability/: alerts.md  dashboards.md  metrics.md
docs/reference/: cli.md
docs/sources/: apexlog.md  cost-controls.md  eventlog-objects.md  eventlogfile.md  index.md  pii-and-sampling.md  pubsub.md
examples/presets/: custom-object-polling.yaml  custom-platform-events.yaml  event-log-objects.yaml  login-history.yaml  multi-org.yaml  setup-audit-trail.yaml
proto/: loki_push.proto
scripts/: check_dist.py  gen_helm_values.py  gen_proto.sh  generate_activity.py
scripts/data/: companies.csv  people.csv
site/: 404.html  index.html  search.json  sitemap.xml
site/404/: index.html
site/architecture/: index.html
site/changelog/: index.html
site/config-reference/: index.html
site/configuration/: index.html
site/configuration/presets/: index.html
site/deployment/: index.html
site/deployment/high-availability/: index.html
site/deployment/kubernetes/: index.html
site/deployment/state/: index.html
site/development/contributing/: index.html
site/development/generate-activity/: index.html
site/development/release-process/: index.html
site/getting-started/: index.html
site/glossary/: index.html
site/includes/abbreviations/: index.html
site/installation/: index.html
site/javascripts/: extra.js  mathjax.js
site/observability/alerts/: index.html
site/observability/dashboards/: index.html
site/observability/metrics/: index.html
site/reference/cli/: index.html
site/security/: index.html
site/sources/: index.html
site/sources/apexlog/: index.html
site/sources/cost-controls/: index.html
site/sources/eventlog-objects/: index.html
site/sources/eventlogfile/: index.html
site/sources/pii-and-sampling/: index.html
site/sources/pubsub/: index.html
site/stylesheets/: extra.css
site/troubleshooting/: index.html
src/sf2loki/: __init__.py  __main__.py  app.py  backfill.py  cli.py  config.py  configdoc.py  doctor.py  egress.py  model.py  shaping.py  statecmd.py  transforms.py
src/sf2loki/auth/: CLAUDE.md  __init__.py  jwt_auth.py
src/sf2loki/coordinate/: CLAUDE.md  __init__.py  base.py  file_lease.py  k8s_lease.py
src/sf2loki/obs/: __init__.py  health.py  limits_poller.py  logging.py  metrics.py
src/sf2loki/salesforce/: CLAUDE.md  apexlog_client.py  avro_codec.py  eventlogfile_client.py  limits_client.py  metadata_client.py  pubsub_client.py  soql_client.py
src/sf2loki/salesforce/_generated/: pubsub_api_pb2_grpc.py
src/sf2loki/sinks/: CLAUDE.md  base.py
src/sf2loki/sources/: CLAUDE.md  apexlog_source.py  base.py  eventlog_objects_source.py  eventlogfile_source.py  org_adapter.py  overlap.py  pubsub_source.py
src/sf2loki/state/: CLAUDE.md  __init__.py  base.py  configmap_store.py  file_store.py  gcs_store.py  org_view.py  s3_store.py
tests/: conftest.py  test_app.py  test_app_integration.py  test_app_startup_log.py  test_backfill.py  test_cli.py  test_config.py  test_config_artifacts_drift.py  test_configdoc.py  test_doctor.py  test_egress.py  test_generate_activity.py  test_model.py  test_multiorg_app.py  test_multiorg_config.py  test_pipeline.py  test_seams_import.py  test_shaping.py  test_statecmd.py  test_static_labels.py  test_transforms.py
tests/auth/: test_jwt_auth.py
tests/coordinate/: test_file_lease.py  test_k8s_lease.py
tests/obs/: test_health.py  test_limits_poller.py  test_logging.py  test_metrics.py  test_org_metrics.py
tests/salesforce/: test_apexlog_client.py  test_avro_codec.py  test_eventlogfile_client.py  test_limits_client.py  test_metadata_client.py  test_pubsub_client.py  test_soql_client.py
tests/sinks/: test_labels.py  test_push.py  test_sink.py
tests/sources/: test_apexlog_source.py  test_eventlog_objects_source.py  test_eventlogfile_source.py  test_org_adapter.py  test_overlap.py  test_pubsub_source.py
tests/state/: test_build_store.py  test_configmap_store.py  test_file_store.py  test_gcs_store.py  test_s3_store.py
(+4 files in other folders)
