[project]
name = "sf2loki"
version = "0.1.0"
description = "Ship Salesforce Event Monitoring data into Grafana Loki"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Rob Knight" }]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "fastavro>=1.9",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42.0",
    "cramjam>=2.8",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "uvloop>=0.19 ; sys_platform != 'win32'",
]

[project.scripts]
sf2loki = "sf2loki.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "grpcio-tools>=1.60",
    "types-protobuf",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sf2loki"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["**/_generated/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["grpc.*", "fastavro.*", "cramjam.*", "uvloop.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sf2loki.salesforce._generated.*", "sf2loki.sinks.loki._generated.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
