[project]
name = "sf2loki"
version = "0.2.0"
description = "Ship Salesforce Event Monitoring data into Grafana Loki"
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Rob Knight" }]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "fastavro>=1.9",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42.0",
    "cramjam>=2.8",
    "structlog>=24.1",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "uvloop>=0.19 ; sys_platform != 'win32'",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
]

[project.optional-dependencies]
s3 = ["aiobotocore>=2.21"]

[project.scripts]
sf2loki = "sf2loki.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "grpcio-tools>=1.60",
    "types-protobuf",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling>=1.26"]  # >=1.26 for PEP 639 SPDX license expressions
build-backend = "hatchling.build"

[tool.hatch.build]
# Internal working-notes docs live next to the code; never ship them in the
# published sdist/wheel (they're for contributors, not installers).
exclude = ["**/CLAUDE.md", "**/AGENTS.md"]

[tool.hatch.build.targets.sdist]
# Hatchling includes the whole tree by default (it does not read .gitignore),
# which would ship CI config, dev scratch (.superpowers/, .claude/), tests, and
# deploy/docs. Pin the sdist to what's needed to build the wheel plus source
# provenance. The committed proto stubs live under src/ and ship in the wheel;
# proto/ is included here for source completeness (regenerating them).
include = [
    "/src/sf2loki",
    "/proto",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sf2loki"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["**/_generated/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Dashboard generator: long PromQL query strings and target() calls read better
# on one line than force-wrapped; line-length is not meaningful for this script.
"deploy/grafana/gen_dashboard.py" = ["E501"]
# Activity generator: long Salesforce API URLs / SOQL / Apex f-strings; ruff
# format won't split them, so line-length is not meaningful here either.
"scripts/generate_activity.py" = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["grpc.*", "fastavro.*", "cramjam.*", "uvloop.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sf2loki.salesforce._generated.*", "sf2loki.sinks.loki._generated.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
